<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:background="@color/transparent"
            android:icon="@android:drawable/ic_menu_zoom"
            android:id="@+id/nav_filter"
            android:title="@string/search_filters" />
    </group>

    <item android:title="@string/contact_us">
        <menu>
            <item
                android:id="@+id/nav_outlook"
                android:icon="@drawable/outlook"
                android:title="@string/outlook" />
            <item
                android:id="@+id/nav_gmail"
                android:icon="@drawable/gmail"
                android:title="@string/gmail" />
            <item
                android:id="@+id/nav_fb"
                android:icon="@drawable/facebook"
                android:title="@string/facebook" />
            <item
                android:id="@+id/nav_instagram"
                android:icon="@drawable/instagram"
                android:title="@string/instagram" />
        </menu>
    </item>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout" />

</menu>
