<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="20sp"
            android:text="@string/choose_category"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>
        <Spinner
            android:layout_weight="1"
            android:id="@+id/categorySpinner"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/brandName"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:hint="@string/enter_brand_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20sp"
            android:layout_weight="1"
            android:id="@+id/priceRange"
            android:layout_margin="10dp"
            android:text="@string/enter_price_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="35dp"
            android:id="@+id/progressValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/priceBar"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="35dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:textColor="@android:color/black"
            android:layout_margin="10dp"
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/border"
            android:hint="@string/enter_item_name"
            android:layout_height="wrap_content" />


        <Button
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:id="@+id/Search"
            android:text="@string/save_settings"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>